--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@myetherwallet/mewconnect-web-client": "^2.1.0-RC.5.6",
     "@portis/web3": "^2.0.0-beta.55",
     "@toruslabs/torus-embed": "^1.5.4",
+    "@types/styled-components": "^5.1.0",
     "@unilogin/provider": "^0.6.1",
     "@walletconnect/web3-provider": "^1.0.11",
     "@web3-react/core": "^6.0.9",
